refactoring structure of css

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,156 +1,10 @@
-body {
-    position: relative;
-    min-height: 100%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 18px;
-    line-height: 1.2;
-    color: #333;
-    background-color: #fff;
-}
-
-img {
-    margin: 0
-}
-
-.main_wrapper {
-    background: white;
-    width: 1000px;
-    height: auto;
-    margin: 0 auto;
-    /* outline: 1px solid silver; */
-}
-
-.header_wrapper {
-    width: 1000px;
-    height: 125px;
-    margin: auto;
-}
-
-.menubar {
-    width: 1000px;
-    height: 50px;
-    background: darkblue;
-    color: white;
-    line-height: 50px;
-}
-
-#menu {
-    padding: 0;
-    margin: 0;
-}
-
-#menu ul {
-    float: left;
-}
-
-#menu li {
-    list-style: none;
-    display: inline-block;
-    font-size: 18px;
-}
-
-#menu a {
-    text-decoration: none;
-    color: white;
-    padding: 7px;
-    margin: 4px;
-}
-
-#menu a:hover {
-    color: #ffddc7;
-}
-
-#form {
-    float: right;
-    padding-right: 8px;
-}
-
-.content_wrapper {
-    width: 1000px;
-    height: 1000px;
-}
-
-#content_area {
-    width: 800px;
-    height: 1000px;
-    float: left;
-    background-color: white;
-}
-
-#sidebar {
-    width: 190px;
-    height: 1000px;
-    float: left;
-    background-color: #0083ca;
-    color: white;
-}
-
-#right_sidebar {
-    width: 10px;
-    height: 1000px;
-    float: right;
-    background-color: #0083ca;
-    color: white;
-}
-
-.sidebar_title {
-    color: darkblue;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    font-size: 28px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.cats li {
-    list-style: none;
-    padding: 5px;
-    padding-left: 25px;
-}
-
-.cats a {
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-}
-
-.cats a:hover {
-    color: #ffddc7;
-}
-
-.single_product {
-    width: 260px;
-    height: 500px;
-    float: left;
-    margin-left: 5px;
-    margin-right: 1px;
-    padding-top: 5px;
-}
-
-img.single_product {
-    width: 250px;
-    height: 400px;
-    padding-bottom: 15px;
-}
-
-h2.cardTitle {
-    font-size: 24px;
-    padding: 5px;
-    padding-top: 10px;
-    text-align: center;
-    color: #ff2400;
-}
-
-.price {
-    color: brown;
-    font-size: 24px;
-    text-align: center;
-}
-
-#footer {
-    width: 1000px;
-    height: 40px;
-    background-color: darkblue;
-    color: white;
-    padding: 10px;
-}
+@import url('reset.css');
+@import url('main.css');
+@import url('header.css');
+@import url('menu.css');
+@import url('content.css');
+@import url('sidebar.css');
+@import url('card.css');
+@import url('addProduct.css');
+@import url('rightSidebar.css');
+@import url('footer.css');
