--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,5 @@
 @import url('addProduct.css');
 @import url('rightSidebar.css');
 @import url('footer.css');
+@import url('infoPanel.css');
+@import url('product.css');
